[package]
name = "ring-buffer-smoketest"
version = "0.1.0"
edition = "2021"

[dependencies]
flux-rs = { git  = "https://github.com/flux-rs/flux.git" }
flux-core = { path = "/Users/acheung/research/projects/flux/lib/flux-core" }

[package.metadata.flux]
enabled = true
no_panic = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1

[profile.dev]
panic = "abort"